// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReservedRockets Component should match the snapshot with no reserved rockets 1`] = `
<div>
  <div
    class="container"
  >
    <p
      style="color: red;"
    >
      No Reserved Rockets
    </p>
  </div>
</div>
`;

exports[`ReservedRockets Component should match the snapshot with reserved rockets 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="shadow p-3 mb-5 bg-body-tertiary rounded list-group"
    >
      <div
        class="list-group-item"
      >
        Rocket 1
      </div>
      <div
        class="list-group-item"
      >
        Rocket 2
      </div>
    </div>
  </div>
</div>
`;
